--- a/frontweb/src/pages/Home/styles.css
+++ b/frontweb/src/pages/Home/styles.css
@@ -5,6 +5,8 @@
 }
 
 .home-card {
+  background-color: #fff;
+  box-shadow: 0px 4px 20px (0,0,0,0.25) ;
   display: flex;
   flex-direction: column-reverse;
   border-radius: 20px;
