--- a/frontweb/src/App.css
+++ b/frontweb/src/App.css
@@ -19,3 +19,9 @@ a:hover {
   text-decoration: none;
   color: unset;
 }
+
+.base-card {
+  background-color: #fff;
+  box-shadow: 0px 4px 20px (0,0,0,0.70) ;
+  border-radius: 10px;
+}
