--- a/frontweb/src/App.css
+++ b/frontweb/src/App.css
@@ -22,6 +22,6 @@ a:hover {
 
 .base-card {
   background-color: #fff;
-  box-shadow: 0px 4px 20px (0,0,0,0.70) ;
+  box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
   border-radius: 10px;
 }
