--- a/frontweb/src/App.css
+++ b/frontweb/src/App.css
@@ -22,6 +22,18 @@ a:hover {
 
 .base-card {
   background-color: #fff;
-  box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
+  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.25);
   border-radius: 10px;
+}
+
+.base-input {
+  border-radius: 10px;
+  font-size: 1em;
+  letter-spacing: -0.015em;
+  color: #263238;
+  height: 50px;
+}
+ 
+.base-input::placeholder {
+  color: #9E9E9E;
 }
