criando tabela de categorias

--- a/frontweb/src/pages/Catalog/styles.css
+++ b/frontweb/src/pages/Catalog/styles.css
@@ -12,8 +12,8 @@
   color: #263238;
 }
 
-@media (min-width: 576px) {
+@media (min-width: 992px) {
   .catalog-container {
-    font-size: 30px;
+    height: 322px;
   }
 }
