--- a/frontweb/src/pages/Admin/Categories/List/styles.css
+++ b/frontweb/src/pages/Admin/Categories/List/styles.css
@@ -36,6 +36,23 @@
   color: #407bff; 
 }
 
+
+.icon-red {
+  color: red ;
+}
+
 .action-itens{
   width: 50px;
+}
+
+.btn-category-add {
+  width: 150px;
+  height: 50px;
+  border-radius: 10px;
+  font-size: 16px;
+  letter-spacing: -0.015em;
+  font-weight: bold;
+  margin-top: 20px;
+  text-align: center;
+  justify-content: end;
 }
